# rag_testset_generator

./: .gitignore  pyproject.toml
rag_testset_generator/: analysis.py  main.py
