[tool.poetry]
name = "rag-testset-generator"
version = "0.1.0"
description = ""
authors = ["rajeev ramani <rajeev.ramani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-ollama = "^0.2.2"
langchain-community = "^0.3.14"
matplotlib = "^3.10.0"
scipy = "^1.15.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
